--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,3 +2,21 @@
     padding-right: 1.25em;
     padding-left: 1.25em;
 }
+
+.nav-banner{
+    padding-top: 2em;
+}
+
+.navbar-nav{
+    flex-direction: column!important;
+    text-align: left;
+}
+.collapse{
+    align-items: flex-start
+}
+
+@media (max-width: 576px){
+ .navbar-brand-logo{
+    width: 200px;
+ }
+}
