--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,14 @@
+.navbar{
+    padding: 0 4rem;
+    background-color: var(--color-palette4);
+}
+.container-fluid{
+    max-width: var(--maxviewdesktop);
+
+}
+
 .nav-item, .nav-brand{
-    padding-right: 1.25em;
-    padding-left: 1.25em;
-    font-family:'Montserrat', sans-serif;
+    font-family:var(--font-primary);
     font-weight: 500;
 }
 
@@ -10,15 +17,25 @@
 }
 
 .navbar-nav{
-    flex-direction: column!important;
     text-align: left;
 }
 .collapse{
-    align-items: flex-start
+    justify-content: center;
 }
 
+
+@media (max-width: 992px){
+    .navbar{
+        padding: 0 2rem;
+    }
+}
 @media (max-width: 576px){
  .navbar-brand-logo{
     width: 200px;
+ }
+}
+@media (max-width: 350px){
+ .navbar-brand-logo{
+    width: 120px;
  }
 }
