--- a/src/views/styles/Home.css
+++ b/src/views/styles/Home.css
@@ -1,66 +1,103 @@
-/* .homepage{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    height: 80vh;
-    width: 80vw;
-    justify-content: space-evenly;
-
-} */
-
 .homepage{
-    width: 100%;
+    
+    background:linear-gradient(var(--color-palette4)20%, transparent 20%);
+    padding: 2rem 4rem;
+}
+
+.homepage__container{
+    max-width: var(--maxviewdesktop);
+    margin: auto;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    
+
+}
+.homepage__container__img1{
+    grid-area: 1 / 1 / 3 / 2;
+}
+.homepage__txt{
+    display: flex;
     flex-direction: column;
-}
-
-.home-img-container2{
-    display: flex;
-    align-self: flex-end;
-    width: 300px;
-    height: auto;
-}
-.home-img-container1{
-    display: flex;
-    align-self: flex-start;
-    width: 300px;
-    height: auto;
-    justify-content: center;
-}
-.home-img1{
-    width: 300px;
-    align-self: center;
-    border-radius: 30em;
-
-}
-.home-text{
+    flex-wrap: wrap;
+    align-content: center;
     padding-top: 1em;
     align-self: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-family: 'Playfair Display', serif;
+    grid-area: 2 / 2 / 4 / 3;
+    font-family: var(--font-secondary);
     font-weight: 500;
-    font-size: 2.5em;
+    font-size: 2.5rem;
+}
+
+
+.homepage__container__img2{
+    grid-area: 3 / 3 / 5 / 4; 
+    display: flex;
+    justify-content: flex-end;
 
 }
-.home-img2{
-    display: flex;
-    align-self: flex-end;
+
+.homepage__img1{
+    align-self: center;
+    border-radius: 30em;
     width: 300px;
-    height: auto;
+
+}
+
+.homepage__img2{
+    max-height: 300px;
 }
 @media (max-width: 992px){
     .homepage{
-        flex-direction: column;
-
+        background:linear-gradient(var(--color-palette4)12%, transparent 12%);
     }
+    .homepage__container{
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+    .homepage__container__img1{
+        grid-area: 1 / 1 / 3 / 3;
+    }
+    .homepage__txt{
+        grid-area: 1 / 3 / 3 / 5;
+    }
+    .homepage__container__img2{
+        grid-area: 3 / 2 / 5 / 4;
+        justify-content: center;
+    }
+
     .home-img-container1, .home-img-container2{
         align-self: center;
     }
+    .homepage__img1{
+        width: 250px;
+    }
+    .homepage__img2{
+        max-height: 250px
+    }
 }
 @media (max-width: 576px){
-    .home-img1{
+    .homepage__container{
+        grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: center;
+    }
+    .homepage__container__img1{
+        grid-area: 1 / 1 / 2 / 2;
+        margin: auto;
+    }
+    .homepage__txt{
+        grid-area: 2 / 1 / 3 / 2;
+        font-size: 1.68rem;
+    }
+    .homepage__container__img2{
+        grid-area: 3 / 1 / 4 / 2;
+        display: none;
+    }
+    .homepage__img1{
         width: 200px;
     }
     .home-text{
