--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,15 +1,19 @@
 .navbar{
     padding: 0 4rem;
-    background-color: var(--color-palette4);
+    background-color: var(--color-palette2);
 }
 .container-fluid{
     max-width: var(--maxviewdesktop);
+    padding:0;
 
+}
+.navbar-brand{
+    width: 80px;
 }
 
 .nav-item, .nav-brand{
-    font-family:var(--font-primary);
     font-weight: 500;
+    padding-left: 2.468rem;
 }
 
 .nav-banner{
@@ -18,23 +22,31 @@
 
 .navbar-nav{
     text-align: left;
+    padding-top: 2em;
 }
 .collapse{
     justify-content: center;
 }
 
 
-@media (max-width: 992px){
-    .navbar{
-        padding: 0 2rem;
+
+@media (max-width: 990px){
+     .navbar{
+        padding: 1rem 4rem;
     }
+     .navbar-brand{
+        width: auto;
+    } 
 }
 @media (max-width: 576px){
+    .navbar-brand{
+
+    }
  .navbar-brand-logo{
-    width: 200px;
+    width: 180px;
  }
 }
-@media (max-width: 350px){
+@media (max-width: 410px){
  .navbar-brand-logo{
     width: 120px;
  }
