--- a/src/views/styles/Home.css
+++ b/src/views/styles/Home.css
@@ -1,6 +1,6 @@
 .homepage{
     
-    background:linear-gradient(var(--color-palette4)20%, transparent 20%);
+    background:linear-gradient(var(--color-palette2)60%, transparent 60%);
     padding: 2rem 4rem;
 }
 
@@ -10,97 +10,113 @@
 
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     
 
 }
-.homepage__container__img1{
-    grid-area: 1 / 1 / 3 / 2;
-}
 .homepage__txt{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
     padding-top: 1em;
-    align-self: center;
-    grid-area: 2 / 2 / 4 / 3;
+    grid-area: 1 / 1 / 3 / 3;
     font-family: var(--font-secondary);
     font-weight: 500;
-    font-size: 2.5rem;
+    font-size: 3rem;
+    
+}
+.homepage__container__img1{
+    grid-area: 1 / 3 / 4 / 3;
+    position: relative;
+}
+.homepage__txt > *{
+    margin: 0;
+    line-height:1.264;
 }
 
+.homepage__text_quote, .about__link{
+    padding-top: 1rem;
+    font-family: var(--font-primary);
+    font-size: 1.654rem;
+    color: var(--color-palette4);
+}
+
+.about__link:is(:hover,:focus){
+    color: var(--color-palette3)
+}
 
 .homepage__container__img2{
     grid-area: 3 / 3 / 5 / 4; 
     display: flex;
     justify-content: flex-end;
-
 }
 
 .homepage__img1{
-    align-self: center;
+    margin-right: 0;
     border-radius: 30em;
-    width: 300px;
+    width: 100%;
+    right: 0;
 
 }
 
 .homepage__img2{
     max-height: 300px;
 }
-@media (max-width: 992px){
+@media (max-width: 990px){
     .homepage{
-        background:linear-gradient(var(--color-palette4)12%, transparent 12%);
+    
+        background:linear-gradient(var(--color-palette2)70%, transparent 70%);
+
     }
-    .homepage__container{
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-    }
-    .homepage__container__img1{
-        grid-area: 1 / 1 / 3 / 3;
-    }
+    
     .homepage__txt{
-        grid-area: 1 / 3 / 3 / 5;
-    }
-    .homepage__container__img2{
-        grid-area: 3 / 2 / 5 / 4;
-        justify-content: center;
+
+        font-size: 2.4rem;
     }
 
-    .home-img-container1, .home-img-container2{
+    .homepage__text_quote, .about__link{
+        font-size: 1.64rem;
+    }
+
+    .home-img-container1{
         align-self: center;
     }
     .homepage__img1{
         width: 250px;
     }
-    .homepage__img2{
-        max-height: 250px
+}
+
+@media (max-width: 820px){
+    .homepage__txt{
+        font-size: ;
     }
+
 }
 @media (max-width: 576px){
     .homepage__container{
         grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, 1fr);
-    justify-content: center;
+        grid-template-rows: repeat(5, 1fr);
+        justify-content: center;
     }
-    .homepage__container__img1{
-        grid-area: 1 / 1 / 2 / 2;
-        margin: auto;
-    }
+
     .homepage__txt{
-        grid-area: 2 / 1 / 3 / 2;
+        grid-area: 1 / 1 / 3 / 2;
+        margin: auto;
         font-size: 1.68rem;
     }
-    .homepage__container__img2{
-        grid-area: 3 / 1 / 4 / 2;
-        display: none;
+    .homepage__container__img1{
+        grid-area: 3 / 1 / 6 / 2;
+        margin: auto;
+        padding: 0;
     }
+
     .homepage__img1{
         width: 200px;
+        position: relative;
     }
     .home-text{
         font-size: 1.625em;
+    }
+    .homepage__text_quote, .about__link{
+        font-size: 1.268rem;
     }
 }
