--- a/src/views/styles/Home.css
+++ b/src/views/styles/Home.css
@@ -33,14 +33,14 @@
     line-height:1.264;
 }
 
-.homepage__text_quote, .about__link{
+.homepage__text_quote, .home__link{
     padding-top: 1rem;
     font-family: var(--font-primary);
     font-size: 1.654rem;
     color: var(--color-palette4);
 }
 
-.about__link:is(:hover,:focus){
+.home__link:is(:hover,:focus){
     color: var(--color-palette3)
 }
 
@@ -73,7 +73,7 @@
         font-size: 2.4rem;
     }
 
-    .homepage__text_quote, .about__link{
+    .homepage__text_quote, .home__link{
         font-size: 1.64rem;
     }
 
@@ -87,11 +87,15 @@
 
 @media (max-width: 820px){
     .homepage__txt{
-        font-size: ;
+        font-size: 2.168rem;
     }
 
 }
 @media (max-width: 576px){
+    .homepage{
+        padding: 1rem 2rem;
+        }
+
     .homepage__container{
         grid-template-columns: 1fr;
         grid-template-rows: repeat(5, 1fr);
@@ -101,7 +105,7 @@
     .homepage__txt{
         grid-area: 1 / 1 / 3 / 2;
         margin: auto;
-        font-size: 1.68rem;
+        font-size: 1.864rem;
     }
     .homepage__container__img1{
         grid-area: 3 / 1 / 6 / 2;
@@ -116,7 +120,7 @@
     .home-text{
         font-size: 1.625em;
     }
-    .homepage__text_quote, .about__link{
+    .homepage__text_quote, .home__link{
         font-size: 1.268rem;
     }
 }
