--- a/src/views/styles/Gallery.css
+++ b/src/views/styles/Gallery.css
@@ -3,35 +3,30 @@
     background-color: var(--color-palette2);
 }
 
+.gallery__container{
+    max-width: var(--maxviewdesktop);
+    margin: auto;
+}
 .gallery__title{
     font-size: 4rem;
     padding: 2rem 4rem;
     font-family: var(--font-secondary);
-    background-color: var(--color-palette2);
     scroll-margin-top: 6rem;
 
-}
-.gallery__container{
-    -webkit-column-count: 3;
-   -webkit-column-gap:   0px;
-   -moz-column-count:    3;
-   -moz-column-gap:      0px;
-   column-count:         3;
-   column-gap:           0px;
 }
 
 
 .gallery__img__overlay{
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
+    top: 1rem;
+    bottom: 1rem;
+    left: 1rem;
+    right: 1rem;
+  /*   height: 100%;
+    width: 100%; */
     opacity: 0;
     transition: .5s ease;
-    background-color: #43434334;
+    background-color: #b39f86a2;
 }
 
 .gallery__img__container:is(:hover, :focus) .gallery__img__overlay{
@@ -59,7 +54,7 @@
     .gallery__title{
         font-size: 3rem;
     }
-    .gallery__container{
+    .gallery__images__container{
         -moz-column-count:    2;
         -webkit-column-count: 2;
         column-count:         2;
@@ -71,7 +66,7 @@
     .gallery__title{
         font-size: 2rem;
     }
-    .gallery{
+    .gallery, .gallery__title{
         padding: 2rem 2rem;
     }
 
