--- a/src/views/styles/Shop.css
+++ b/src/views/styles/Shop.css
@@ -1,21 +1,35 @@
 .shop{
-    display: flex;
-    width: 100%;
+    
     padding: 2rem 4rem;
-    margin: 0;
+
+}
+.shop__container{
+    max-width: var(--maxviewdesktop);
+    display: flex;
+    margin: auto;
 }
 .shop__header{
-    position: relative;
+
     height: 20rem;
     background-color: var(--color-palette2);
+    padding: 2rem 4rem;
     
 }
 
 .shop__header__container{
+    position: relative;
+    height: 20rem;
+    margin: auto;
+    max-width: var(--maxviewdesktop);
+
+}
+
+.shop__header__content{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    padding: 2rem 4rem;
+
+    margin: auto;
 
 }
 .shop__title{
@@ -24,6 +38,7 @@
 }
 .shop__subtitle{
     color: var(--color-palette4);
+    font-weight: 500;
 }
 
 
@@ -180,9 +195,6 @@
         max-width: 30%;
     }
 
-    .shop__filter{
-
-    }
   }
 
   @media (max-width: 767px){
