--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -29,6 +29,7 @@
     justify-content: center;
 }
 
+/* ------------------------  Media Queries ------------------------*/
 
 
 @media (max-width: 990px){
