--- a/src/views/styles/Gallery.css
+++ b/src/views/styles/Gallery.css
@@ -50,6 +50,8 @@
     padding: 1rem;
 }
 
+/* ------------------------  Media Queries ------------------------*/
+
 @media (max-width: 992px){
     .gallery__title{
         font-size: 3rem;
