--- a/src/views/styles/Home.css
+++ b/src/views/styles/Home.css
@@ -61,6 +61,10 @@
 .homepage__img2{
     max-height: 300px;
 }
+
+/* ------------------------  Media Queries ------------------------*/
+
+
 @media (max-width: 990px){
     .homepage{
     
