--- a/src/views/styles/NotFound.css
+++ b/src/views/styles/NotFound.css
@@ -1,6 +1,7 @@
 .notfound{
     background-color: var(--color-palette2);
     padding: 2rem 4rem;
+    height: 100%;
 }
 .notfound__container{
     display: flex;
@@ -11,6 +12,9 @@
 
 
 }
+.notfound__txt{
+    font-family: var(--font-secondary);
+}
 
 .notfound__img__container{
     display: flex;
@@ -19,6 +23,9 @@
 margin: auto;
 width: 300px;
 }
+
+/* ------------------------  Media Queries ------------------------*/
+
 
 @media (max-width: 767px){
     .notfound__txt{
